platform/apps/seneschal/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seneschal
  labels:
    steading/gateway-access: public
