platform/apps/seneschal/base/api-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-green
  namespace: seneschal
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: seneschal-api-green
      deployment-slot: green
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seneschal-api-green
        app.kubernetes.io/component: api
        deployment-slot: green
    spec:
      containers:
        - name: api
          image: ghcr.io/oxface/seneschal-api:sha-4c079c50880d47162fa4fb7ee5763689d2ec84ea
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
