platform/apps/seneschal/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: seneschal
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: seneschal-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seneschal-web
    spec:
      containers:
        - name: web
          image: ghcr.io/oxface/seneschal-web:sha-4c079c50880d47162fa4fb7ee5763689d2ec84ea
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
