platform/apps/seneschal/base/api-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-preview
  namespace: seneschal
spec:
  selector:
    app.kubernetes.io/component: api
    deployment-slot: green
  ports:
    - name: http
      port: 8000
      targetPort: http
