platform/apps/seneschal/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: seneschal
spec:
  selector:
    app.kubernetes.io/name: seneschal-api
  ports:
    - name: http
      port: 8000
      targetPort: http
